--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.18",
+        "mockery/mockery": "^1.5",
         "orchestra/testbench": "^6.11",
         "phpunit/phpunit": "^9.3",
         "psalm/plugin-laravel": "^1.4",
